--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
+    "axios": "0.18.0",
     "better-scroll": "^1.13.2",
     "jsonp": "0.2.1",
-    "axios": "0.18.0",
-    "vue-lazyload": "1.2.6"
+    "vue": "^2.5.2",
+    "vue-lazyload": "1.2.6",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
